manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  pod-dmission
  namespace: default
  labels:
    app:  pod-dmission
spec:
  selector:
    matchLabels:
      app: pod-dmission
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  pod-dmission
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name:  pod-dmission
          image:  harbor.myshuju.top/public/admissionpod:v0.0.6
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort:  1443
              name:  pod-dmission
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
            - name: tls
              mountPath: /etc/webhook/certs
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: tls
          secret:
            secretName: admission-pod-tls
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: pod-dmission
  namespace: default
spec:
  selector:
    app: pod-dmission
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: pod-dmission
      protocol: TCP
      port: 443
      targetPort: 1443
